--- a/Interior/index.html
+++ b/Interior/index.html
@@ -733,7 +733,7 @@
     <!-- Gill Sans -->
     <link href="https://fonts.cdnfonts.com/css/gill-sans" rel="stylesheet" />
     <!-- Core theme TailwindCSS-->
-    <link rel="stylesheet" href="./css.css" />
+    <link rel="stylesheet" href="./css/interior.css" />
     <!-- Core theme CSS-->
     <link rel="stylesheet" href="./css/styles.css" />
     <title>Dashboard - OneTeam Admin</title>
