--- a/Interior/admin-invite-member.html
+++ b/Interior/admin-invite-member.html
@@ -1520,7 +1520,7 @@
           </button>
         </div>
         <!-- Main Content -->
-        <main b-tqney8pgqj="" class="flex-1 bg-[url('/Interior/images/blue-stars-bg.jpg')] bg-auto">
+        <main b-tqney8pgqj="" class="flex-1 bg-[url('/images/blue-stars-bg.jpg')] bg-auto">
           <div b-tqney8pgqj="" class="py-6">
             <div b-tqney8pgqj="" class="max-w-7xl mx-auto px-4 sm:px-6 md:px-8">
               <div class="pt-5 md:flex md:items-center md:justify-between">
