added home page link to dashboard button

--- a/Interior/admin-pending-request-review.html
+++ b/Interior/admin-pending-request-review.html
@@ -943,7 +943,7 @@
                 <!-- Current: "bg-gray-100 text-gray-900", Default: "text-gray-600 hover:bg-gray-50 hover:text-gray-900" -->
                 <a
                   class="sidebar-mobile-link group text-federal-blue rounded-xl flex flex-row hover:bg-federal-blue hover:text-white px-2 py-3"
-                  href="/"
+                  href="index.html"
                 >
                   <!--
                                   Heroicon name: outline/home
