added admin studio info page

--- a/Interior/index.html
+++ b/Interior/index.html
@@ -1569,7 +1569,7 @@
                           <span
                             >Pending request: More than six (<a
                               class="text-blue-600 hover:text-blue-900"
-                              href="/Studio?id=2"
+                              href="admin-studio-info.html"
                               >20th Century Fox Television</a
                             >)</span
                           >
