--- a/Interior/admin-studio-info.html
+++ b/Interior/admin-studio-info.html
@@ -2334,7 +2334,7 @@
                             <a
                               class="inline-flex items-center justify-center rounded-md border border-transparent bg-federal-blue px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-gray-900 focus:outline-none focus:ring-2 focus:ring-gray-500 focus:ring-offset-2"
                               href="/EditDeal?studioid=2"
-                              >Add deal</a
+                              >Add Deal</a
                             >
                           </div>
                         </div>
