--- a/Interior/admin-pending-request-review.html
+++ b/Interior/admin-pending-request-review.html
@@ -1207,7 +1207,7 @@
 
               <a
                 class="sidebar-desktop-link group sidebar-desktop-link active text-federal-blue rounded-xl flex flex-row hover:bg-federal-blue hover:text-white px-2 py-3"
-                href="/"
+                href="index.html"
               >
                 <!--
                 Heroicon name: outline/home
