--- a/Interior/admin-add-deal.html
+++ b/Interior/admin-add-deal.html
@@ -1,6 +1,6 @@
 <html
   lang="en"
-  class="h-full bg-gray-100 k-webkit k-webkit111 bg-[url('/images/blue-stars-bg.jpg')] bg-auto"
+  class="h-full bg-gray-100 k-webkit k-webkit111 bg-[url('/images/blue-stars-background.jpg')] bg-auto"
 >
   <head class="h-full bg-gray-100">
     <style type="text/css">
