--- a/Interior/admin-invite-member.html
+++ b/Interior/admin-invite-member.html
@@ -1,4 +1,4 @@
-<html lang="en" class="h-full bg-gray-100 k-webkit k-webkit111">
+<html lang="en" class="h-full bg-gray-100 k-webkit k-webkit111 bg-[url('/images/blue-stars-background.jpg')] bg-auto">
   <head class="h-full bg-gray-100">
     <style type="text/css">
       .swal-icon--error {
@@ -777,7 +777,7 @@
     </style>
   </head>
   <body
-    class="h-full bg-[url('/Interior/images/blue-stars-bg.jpg')] bg-auto"
+    class="h-full"
     data-new-gr-c-s-check-loaded="14.1104.0"
     data-gr-ext-installed=""
   >
