--- a/Interior/index.html
+++ b/Interior/index.html
@@ -1,4 +1,4 @@
-<html lang="en" class="h-full bg-gray-100 k-webkit k-webkit111">
+<html lang="en" class="h-full bg-gray-100 k-webkit k-webkit111 bg-[url('/images/blue-stars-background.jpg')] bg-auto">
   <head class="h-full bg-gray-100">
     <style type="text/css">
       .swal-icon--error {
@@ -777,7 +777,7 @@
     </style>
   </head>
   <body
-    class="h-full bg-[url('/images/blue-stars-bg.jpg')] bg-auto"
+    class="h-full "
     data-new-gr-c-s-check-loaded="14.1104.0"
     data-gr-ext-installed=""
   >
@@ -1520,7 +1520,7 @@
           </button>
         </div>
         <!-- Main Content -->
-        <main b-tqney8pgqj="" class="flex-1 bg-[url('/images/blue-stars-bg.jpg')] bg-auto">
+        <main b-tqney8pgqj="" class="flex-1 ">
           <div b-tqney8pgqj="" class="py-6">
             <div b-tqney8pgqj="" class="max-w-7xl mx-auto px-4 sm:px-6 md:px-8">
               <div class="pt-5 md:flex md:items-center md:justify-between">
