--- a/Interior/admin-pending-request-review.html
+++ b/Interior/admin-pending-request-review.html
@@ -1,4 +1,4 @@
-<html lang="en" class="h-full bg-gray-100 k-webkit k-webkit111 bg-[url('/images/blue-stars-bg.jpg')] bg-auto">
+<html lang="en" class="h-full bg-gray-100 k-webkit k-webkit111 bg-[url('/images/blue-stars-backbround.jpg')] bg-auto">
   <head class="h-full bg-gray-100">
     <style type="text/css">
       .swal-icon--error {
