Added pending request review add buttton page

--- a/Interior/admin-pending-request-review.html
+++ b/Interior/admin-pending-request-review.html
@@ -1686,7 +1686,7 @@
                                       <div class="flex-none">
                                         <a
                                           class="inline-flex items-center rounded-full border border-transparent bg-white-gold p-1 text-white shadow-sm hover:bg-gray-900 focus:outline-none focus:ring-2 focus:ring-gray-500 focus:ring-offset-2"
-                                          href="/IncludeMember?prid=170&amp;rid=10"
+                                          href="admin-pending-request-add-button.html"
                                         >
                                           <!-- Heroicon name: mini/plus -->
                                           <svg
@@ -1873,7 +1873,7 @@
                                       <div class="flex-none">
                                         <a
                                           class="inline-flex items-center rounded-full border border-transparent bg-white-gold p-1 text-white shadow-sm hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2"
-                                          href="/IncludeMember?prid=169&amp;rid=11"
+                                          href="admin-pending-request-add-button.html"
                                         >
                                           <!-- Heroicon name: mini/plus -->
                                           <svg
