--- a/Interior/admin-pending-request-review.html
+++ b/Interior/admin-pending-request-review.html
@@ -1572,7 +1572,7 @@
                   </div>
                   <!-- Buttons -->
                   <div class="p-8">
-                    <div class="pb-3 pl-3 flex flex-row gap-4 items-center justify-between lg:w-1/3 sm:w-1/2">
+                    <div class="pb-3 pl-3 flex flex-row gap-4 items-center justify-between lg:w-1/2 sm:w-1/2">
                       <div class="class text-white font-gill-sans font-medium">AP Clerk:</div>
                       <a
                         class="inline-flex items-center rounded-md bg-blue-100 px-4 py-2 text-sm font-medium text-federal-blue shadow-sm hover:bg-blue-200 focus:outline-none focus:ring-2 focus:ring-federal-blue focus:ring-offset-2 bg-[url('/images/blue-button.png')]"
@@ -1580,7 +1580,7 @@
                         >PDF Preview</a
                       >
                     </div>
-                    <div class="py-3 pl-3 flex flex-row gap-4 items-center justify-between lg:w-1/3 sm:w-1/2">
+                    <div class="py-3 pl-3 flex flex-row gap-4 items-center justify-between lg:w-1/2">
                       <div class="class text-white font-gill-sans font-medium">Payroll Assistant:</div>
                       <a
                         class="inline-flex items-center rounded-md  bg-blue-100 px-4 py-2 text-sm font-medium text-federal-blue shadow-sm hover:bg-blue-200 focus:outline-none focus:ring-2 focus:ring-federal-blue focus:ring-offset-2 bg-[url('/images/blue-button.png')]"
