admin studio info show info page added

--- a/Interior/index.html
+++ b/Interior/index.html
@@ -1510,13 +1510,24 @@
             b-tqney8pgqj=""
             type="button"
             @click="isOffCanvasOpen = true"
-            class="-ml-0.5 -mt-0.5 h-12 w-12 inline-flex items-center justify-center rounded-md text-white hover:text-white-gold focus:outline-none focus:ring-inset  absolute top-0 left-0"
+            class="-ml-0.5 -mt-0.5 h-12 w-12 inline-flex items-center justify-center rounded-md text-white hover:text-white-gold focus:outline-none absolute top-0 left-0"
           >
             <span b-tqney8pgqj="" class="sr-only">Open sidebar</span>
             <!-- Heroicon name: outline/menu -->
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-              <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25H12" />
-            </svg>  
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="w-6 h-6"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25H12"
+              />
+            </svg>
           </button>
         </div>
         <!-- Main Content -->
