--- a/Interior/admin-studio-info-show-info-date-hyperlink.html
+++ b/Interior/admin-studio-info-show-info-date-hyperlink.html
@@ -1506,7 +1506,7 @@
             b-tqney8pgqj=""
             type="button"
             @click="isOffCanvasOpen = true"
-            class="-ml-0.5 -mt-0.5 h-12 w-12 inline-flex items-center justify-center rounded-md text-white hover:text-white-gold focus:outline-none focus:ring-2 focus:ring-inset focus:ring-dark-gold absolute top-0 left-0"
+            class="-ml-0.5 -mt-0.5 h-12 w-12 inline-flex items-center justify-center rounded-md text-white hover:text-white-gold focus:outline-none absolute top-0 left-0"
           >
             <span b-tqney8pgqj="" class="sr-only">Open sidebar</span>
             <!-- Heroicon name: outline/menu -->
