--- a/Interior/admin-pending-request-review.html
+++ b/Interior/admin-pending-request-review.html
@@ -972,7 +972,7 @@
 
                 <a
                   class="sidebar-mobile-link group text-federal-blue rounded-xl flex flex-row hover:bg-federal-blue hover:text-white px-2 py-3"
-                  href="/Studios"
+                  href="admin-manage-employers.html"
                 >
                   <!-- Heroicon name: outline/folder -->
                   <svg
@@ -992,7 +992,7 @@
                       d="M3 7v10a2 2 0 002 2h14a2 2 0 002-2V9a2 2 0 00-2-2h-6l-2-2H5a2 2 0 00-2 2z"
                     ></path>
                   </svg>
-                  Manage employers
+                  Manage Employers
                 </a>
 
                 <a
@@ -1017,7 +1017,7 @@
                       d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"
                     ></path>
                   </svg>
-                  Invite employer user
+                  Invite Employer User
                 </a>
 
                 <a
@@ -1042,7 +1042,7 @@
                       d="M20 13V6a2 2 0 00-2-2H6a2 2 0 00-2 2v7m16 0v5a2 2 0 01-2 2H6a2 2 0 01-2-2v-5m16 0h-2.586a1 1 0 00-.707.293l-2.414 2.414a1 1 0 01-.707.293h-3.172a1 1 0 01-.707-.293l-2.414-2.414A1 1 0 006.586 13H4"
                     ></path>
                   </svg>
-                  Member accounts
+                  Member Accounts
                 </a>
 
                 <a
@@ -1067,7 +1067,7 @@
                       d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"
                     ></path>
                   </svg>
-                  Employer accounts
+                  Employer Accounts
                 </a>
 
                 <a
@@ -1092,7 +1092,7 @@
                       d="M3 7v10a2 2 0 002 2h14a2 2 0 002-2V9a2 2 0 00-2-2h-6l-2-2H5a2 2 0 00-2 2z"
                     ></path>
                   </svg>
-                  Content management
+                  Content Management
                 </a>
 
                 <a
@@ -1204,7 +1204,6 @@
               class="mt-5 flex-1 px-2 bg-white space-y-1 font-semibold"
             >
               <!-- Current: "bg-gray-100 text-gray-900", Default: "text-gray-600 hover:bg-gray-50 hover:text-gray-900" -->
-
               <a
                 class="sidebar-desktop-link group sidebar-desktop-link active text-federal-blue rounded-xl flex flex-row hover:bg-federal-blue hover:text-white px-2 py-3"
                 href="index.html"
@@ -1236,7 +1235,7 @@
 
               <a
                 class="sidebar-desktop-link group text-federal-blue rounded-xl flex flex-row hover:bg-federal-blue hover:text-white px-2 py-3"
-                href="/Studios"
+                href="admin-manage-employers.html"
               >
                 <!-- Heroicon name: outline/folder -->
                 <svg
@@ -1256,7 +1255,7 @@
                     d="M3 7v10a2 2 0 002 2h14a2 2 0 002-2V9a2 2 0 00-2-2h-6l-2-2H5a2 2 0 00-2 2z"
                   ></path>
                 </svg>
-                Manage employers
+                Manage Employers
               </a>
 
               <a
@@ -1281,7 +1280,7 @@
                     d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"
                   ></path>
                 </svg>
-                Invite employer user
+                Invite Employer User
               </a>
 
               <a
@@ -1306,7 +1305,7 @@
                     d="M20 13V6a2 2 0 00-2-2H6a2 2 0 00-2 2v7m16 0v5a2 2 0 01-2 2H6a2 2 0 01-2-2v-5m16 0h-2.586a1 1 0 00-.707.293l-2.414 2.414a1 1 0 01-.707.293h-3.172a1 1 0 01-.707-.293l-2.414-2.414A1 1 0 006.586 13H4"
                   ></path>
                 </svg>
-                Member accounts
+                Member Accounts
               </a>
 
               <a
@@ -1331,7 +1330,7 @@
                     d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"
                   ></path>
                 </svg>
-                Employer accounts
+                Employer Accounts
               </a>
 
               <a
@@ -1356,7 +1355,7 @@
                     d="M3 7v10a2 2 0 002 2h14a2 2 0 002-2V9a2 2 0 00-2-2h-6l-2-2H5a2 2 0 00-2 2z"
                   ></path>
                 </svg>
-                Content management
+                Content Management
               </a>
 
               <a
