added pending approval approve/reject page

--- a/Interior/index.html
+++ b/Interior/index.html
@@ -1609,7 +1609,7 @@
                         >
                           <a
                             class="inline-flex items-center rounded-md border bg-blue-100 px-4 py-2 text-sm font-medium leading-4 text-federal-blue shadow-sm hover:bg-blue-200 focus:outline-none focus:ring-2 focus:ring-federal-blue focus:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-30 bg-[url('/images/blue-button.png')]"
-                            href="/User?id=5c6bf14a-b739-440a-b09f-eec905da355e"
+                            href="admin-pending-approval-approve-reject.html"
                             >Approve/Reject<span class="sr-only"
                               >, Additional Payroll24</span
                             ></a
@@ -1628,7 +1628,7 @@
                         >
                           <a
                             class="inline-flex items-center rounded-md border bg-blue-100 px-4 py-2 text-sm font-medium leading-4 text-federal-blue shadow-sm hover:bg-blue-200 focus:outline-none focus:ring-2 focus:ring-federal-blue focus:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-30 bg-[url('/images/blue-button.png')]"
-                            href="/User?id=8447ad57-0d7a-4c64-9ee2-bd4689469671"
+                            href="admin-pending-approval-approve-reject.html"
                             >Approve/Reject<span class="sr-only"
                               >, Additional Payroll23</span
                             ></a
