show info name hyperlink link added

--- a/Interior/admin-studio-info.html
+++ b/Interior/admin-studio-info.html
@@ -1612,7 +1612,7 @@
                                         from
                                         <a
                                           class="text-blue-600 hover:text-blue-900"
-                                          href="/User?id=bf464bd0-6f21-4507-804c-851a41598608"
+                                          href="admin-show-info-name-hyperlink.html"
                                           >Jim Nicholson</a
                                         >
                                         (<span>completed</span>)
