--- a/Interior/admin-pending-request-add-button.html
+++ b/Interior/admin-pending-request-add-button.html
@@ -997,7 +997,7 @@
 
                 <a
                   class="sidebar-mobile-link group text-federal-blue rounded-xl flex flex-row hover:bg-federal-blue hover:text-white px-2 py-3"
-                  href="/Invite?userType=Studio"
+                  href="admin-invite-employer-user.html"
                 >
                   <!-- Heroicon name: outline/calendar -->
                   <svg
@@ -1260,7 +1260,7 @@
 
               <a
                 class="sidebar-desktop-link group text-federal-blue rounded-xl flex flex-row hover:bg-federal-blue hover:text-white px-2 py-3"
-                href="/Invite?userType=Studio"
+                href="admin-invite-employer-user.html"
               >
                 <!-- Heroicon name: outline/calendar -->
                 <svg
