--- a/Interior/admin-studio-info.html
+++ b/Interior/admin-studio-info.html
@@ -1000,7 +1000,7 @@
 
                 <a
                   class="sidebar-mobile-link group text-federal-blue rounded-xl flex flex-row hover:bg-federal-blue hover:text-white px-2 py-3"
-                  href="/Invite?userType=Studio"
+                  href="admin-invite-employer-user.html"
                 >
                   <!-- Heroicon name: outline/calendar -->
                   <svg
@@ -1263,7 +1263,7 @@
 
               <a
                 class="sidebar-desktop-link group text-federal-blue rounded-xl flex flex-row hover:bg-federal-blue hover:text-white px-2 py-3"
-                href="/Invite?userType=Studio"
+                href="admin-invite-employer-user.html"
               >
                 <!-- Heroicon name: outline/calendar -->
                 <svg
