--- a/Interior/admin-invite-member.html
+++ b/Interior/admin-invite-member.html
@@ -1026,7 +1026,7 @@
 
                 <a
                   class="sidebar-mobile-link group text-federal-blue rounded-xl flex flex-row hover:bg-federal-blue hover:text-white px-2 py-3"
-                  href="/Members"
+                  href="admin-member-accounts.html"
                 >
                   <!-- Heroicon name: outline/inbox -->
                   <svg
@@ -1076,7 +1076,7 @@
 
                 <a
                   class="sidebar-mobile-link group text-federal-blue rounded-xl flex flex-row hover:bg-federal-blue hover:text-white px-2 py-3"
-                  href="/EditContentPage"
+                  href="admin-content-management.html"
                 >
                   <!-- Heroicon name: outline/folder -->
                   <svg
@@ -1289,7 +1289,7 @@
 
               <a
                 class="sidebar-desktop-link group text-federal-blue rounded-xl flex flex-row hover:bg-federal-blue hover:text-white px-2 py-3"
-                href="/Members"
+                href="admin-member-accounts.html"
               >
                 <!-- Heroicon name: outline/inbox -->
                 <svg
@@ -1339,7 +1339,7 @@
 
               <a
                 class="sidebar-desktop-link group text-federal-blue rounded-xl flex flex-row hover:bg-federal-blue hover:text-white px-2 py-3"
-                href="/EditContentPage"
+                href="admin-content-management.html"
               >
                 <!-- Heroicon name: outline/folder -->
                 <svg
