--- a/Interior/admin-pending-request-review.html
+++ b/Interior/admin-pending-request-review.html
@@ -1022,7 +1022,7 @@
 
                 <a
                   class="sidebar-mobile-link group text-federal-blue rounded-xl flex flex-row hover:bg-federal-blue hover:text-white px-2 py-3"
-                  href="/Members"
+                  href="admin-member-accounts.html"
                 >
                   <!-- Heroicon name: outline/inbox -->
                   <svg
@@ -1072,7 +1072,7 @@
 
                 <a
                   class="sidebar-mobile-link group text-federal-blue rounded-xl flex flex-row hover:bg-federal-blue hover:text-white px-2 py-3"
-                  href="/EditContentPage"
+                  href="admin-content-management.html"
                 >
                   <!-- Heroicon name: outline/folder -->
                   <svg
@@ -1285,7 +1285,7 @@
 
               <a
                 class="sidebar-desktop-link group text-federal-blue rounded-xl flex flex-row hover:bg-federal-blue hover:text-white px-2 py-3"
-                href="/Members"
+                href="admin-member-accounts.html"
               >
                 <!-- Heroicon name: outline/inbox -->
                 <svg
@@ -1335,7 +1335,7 @@
 
               <a
                 class="sidebar-desktop-link group text-federal-blue rounded-xl flex flex-row hover:bg-federal-blue hover:text-white px-2 py-3"
-                href="/EditContentPage"
+                href="admin-content-management.html"
               >
                 <!-- Heroicon name: outline/folder -->
                 <svg
