--- a/Interior/admin-show-info-name-hyperlink.html
+++ b/Interior/admin-show-info-name-hyperlink.html
@@ -1025,7 +1025,7 @@
 
                 <a
                   class="sidebar-mobile-link group text-federal-blue rounded-xl flex flex-row hover:bg-federal-blue hover:text-white px-2 py-3"
-                  href="/Members"
+                  href="admin-member-accounts.html"
                 >
                   <!-- Heroicon name: outline/inbox -->
                   <svg
@@ -1075,7 +1075,7 @@
 
                 <a
                   class="sidebar-mobile-link group text-federal-blue rounded-xl flex flex-row hover:bg-federal-blue hover:text-white px-2 py-3"
-                  href="/EditContentPage"
+                  href="admin-content-management.html"
                 >
                   <!-- Heroicon name: outline/folder -->
                   <svg
@@ -1288,7 +1288,7 @@
 
               <a
                 class="sidebar-desktop-link group text-federal-blue rounded-xl flex flex-row hover:bg-federal-blue hover:text-white px-2 py-3"
-                href="/Members"
+                href="admin-member-accounts.html"
               >
                 <!-- Heroicon name: outline/inbox -->
                 <svg
@@ -1338,7 +1338,7 @@
 
               <a
                 class="sidebar-desktop-link group text-federal-blue rounded-xl flex flex-row hover:bg-federal-blue hover:text-white px-2 py-3"
-                href="/EditContentPage"
+                href="admin-content-management.html"
               >
                 <!-- Heroicon name: outline/folder -->
                 <svg
