--- a/Interior/admin-employer-archive.html
+++ b/Interior/admin-employer-archive.html
@@ -1,4 +1,7 @@
-<html lang="en" class="h-full bg-gray-100 k-webkit k-webkit111 bg-[url('/images/blue-stars-background.jpg')] bg-auto">
+<html
+  lang="en"
+  class="h-full bg-gray-100 k-webkit k-webkit111 bg-[url('/images/blue-stars-background.jpg')] bg-auto"
+>
   <head class="h-full bg-gray-100">
     <style type="text/css">
       .swal-icon--error {
@@ -832,11 +835,7 @@
       </ul>
     </nav>
     <!-- Body -->
-    <div
-      b-tqney8pgqj=""
-      x-data="{ isOffCanvasOpen: false }"
-      class=""
-    >
+    <div b-tqney8pgqj="" x-data="{ isOffCanvasOpen: false }" class="">
       <!-- Off-canvas menu for mobile, show/hide based on off-canvas menu state. -->
       <div
         b-tqney8pgqj=""
@@ -1499,7 +1498,7 @@
       </div>
 
       <!-- Content Container-->
-      <div b-tqney8pgqj="" class=" md:pl-64 flex flex-col flex-1 h-full">
+      <div b-tqney8pgqj="" class="md:pl-64 flex flex-col flex-1 h-full">
         <!-- Sidebar Icon -->
         <div
           b-tqney8pgqj=""
@@ -1530,190 +1529,114 @@
           </button>
         </div>
         <!-- Main Content -->
-        <main b-tqney8pgqj="" class="flex-1 bg-[url('/images/blue-stars-bg.jpg')] bg-auto">
-          <div b-tqney8pgqj="" class="py-6">
-            <div b-tqney8pgqj="" class="max-w-7xl mx-auto px-4 sm:px-6 md:px-8">
-              <div class="pt-5 md:flex md:items-center md:justify-between">
-                <div class="min-w-0 flex-1">
-                  <h2
-                    class="text-2xl font-thin leading-7 text-white sm:truncate sm:text-3xl sm:tracking-tight font-gill-sans"
-                  >
-                    Invite Member
-                  </h2>
-                </div>
-                <div class="mt-4 flex md:mt-0 md:ml-4">
-                  <button
-                    id="submitButton"
-                    type="button"
-                    class="inline-flex items-center rounded-md border border-dark-gold bg-white-gold px-4 py-2 text-sm font-medium text-dark-gold hover:text-white shadow-sm hover:bg-gray-900 focus:outline-none focus:ring-2 focus:ring-dark-gold focus:ring-offset-2"
-                  >
-                    Invite Member
-                  </button>
-                </div>
-              </div>
-
-              <form
-                method="post"
-                class="py-2 px-3 mt-8 space-y-2 bg-white rounded-xl"
-                id="inviteMemberForm"
-                novalidate="novalidate"
-              >
-                <div>
-                    <h2 class="text-federal-blue font-bold text-lg">User Information</h2>
-                </div>
-                <div class="border-b-2 border-gray-200 pb-4">
-                    <div>
-
-                      <p class="text-sm text-gray-500">
-                        The user will receive a registration link via email.
-                      </p>
-                    </div>
-                </div>
-
-                <div class="space-y-8 divide-y divide-gray-200">
-                  <div class="pt-1">
-                    <div
-                      class="mt-6 grid grid-cols-1 gap-y-6 gap-x-4 sm:grid-cols-8"
+        <main b-tqney8pgqj="" class="flex-1">
+            <div b-tqney8pgqj="" class="py-6">
+              <div b-tqney8pgqj="" class="max-w-7xl mx-auto px-4 sm:px-6 md:px-8">
+                <div class="mt-8 md:flex md:items-center md:justify-between">
+                  <div class="min-w-0 flex-initial">
+                    <h2
+                      class="text-2xl font-extrabold leading-7 text-white sm:truncate sm:text-3xl sm:tracking-tight font-gill-sans"
                     >
-                      <input
-                        type="hidden"
-                        value="0"
-                        data-val="true"
-                        data-val-required="Studio is required"
-                        id="Invite_StudioId"
-                        name="Invite.StudioId"
-                      />
-                    </div>
-                    <div
-                      class="mt-6 grid grid-cols-1 gap-y-6 gap-x-4 sm:grid-cols-8"
+                      ARCHIVE <span>|</span> <span class="font-thin">Kathleen Riley</span> 
+                    </h2>
+                  </div>
+  
+                  <div class="mt-4 flex-auto md:mt-0 md:ml-4">
+                    <span
+                      class="inline-flex items-center rounded-full bg-white-gold px-3 py-0.5 text-[10px] font-medium text-dark-gold"
+                      >Studio User</span
                     >
-                      <div class="sm:col-span-3">
-                        <label
-                          class="block text-sm font-bold text-federal-blue"
-                          for="Invite_FullName"
-                          >Full name</label
-                        >
-                        <div class="mt-1">
-                          <input
-                            type="text"
-                            autocomplete="none"
-                            class="block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm"
-                            data-val="true"
-                            data-val-required="Full name is required"
-                            id="Invite_FullName"
-                            name="Invite.FullName"
-                            value=""
-                          />
-                        </div>
-
-                        <div
-                          class="field-error-alert-div mt-4 rounded-md bg-red-50 p-4"
-                        >
-                          <div class="flex">
-                            <div class="flex-shrink-0">
-                              <!-- Heroicon name: mini/x-circle -->
-                              <svg
-                                class="h-5 w-5 text-red-400"
-                                xmlns="http://www.w3.org/2000/svg"
-                                viewBox="0 0 20 20"
-                                fill="currentColor"
-                                aria-hidden="true"
-                              >
-                                <path
-                                  fill-rule="evenodd"
-                                  d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.28 7.22a.75.75 0 00-1.06 1.06L8.94 10l-1.72 1.72a.75.75 0 101.06 1.06L10 11.06l1.72 1.72a.75.75 0 101.06-1.06L11.06 10l1.72-1.72a.75.75 0 00-1.06-1.06L10 8.94 8.28 7.22z"
-                                  clip-rule="evenodd"
-                                ></path>
-                              </svg>
-                            </div>
-                            <div class="ml-3">
-                              <h3 class="text-sm font-medium text-red-800">
-                                <span
-                                  class="field-validation-valid"
-                                  data-valmsg-for="Invite.FullName"
-                                  data-valmsg-replace="true"
-                                ></span>
-                              </h3>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-
-                      <div class="sm:col-span-2">
-                        <label
-                          class="block text-sm font-bold text-federal-blue"
-                          for="Invite_EmailAddress"
-                          >Email address</label
-                        >
-                        <div class="mt-1">
-                          <input
-                            type="email"
-                            autocomplete="none"
-                            class="block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm"
-                            data-val="true"
-                            data-val-email="Invalid email address"
-                            data-val-required="Email address is required"
-                            id="Invite_EmailAddress"
-                            name="Invite.EmailAddress"
-                            value=""
-                          />
-                        </div>
-
-                        <div
-                          class="field-error-alert-div mt-4 rounded-md bg-red-50 p-4"
-                        >
-                          <div class="flex">
-                            <div class="flex-shrink-0">
-                              <!-- Heroicon name: mini/x-circle -->
-                              <svg
-                                class="h-5 w-5 text-red-400"
-                                xmlns="http://www.w3.org/2000/svg"
-                                viewBox="0 0 20 20"
-                                fill="currentColor"
-                                aria-hidden="true"
-                              >
-                                <path
-                                  fill-rule="evenodd"
-                                  d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.28 7.22a.75.75 0 00-1.06 1.06L8.94 10l-1.72 1.72a.75.75 0 101.06 1.06L10 11.06l1.72 1.72a.75.75 0 101.06-1.06L11.06 10l1.72-1.72a.75.75 0 00-1.06-1.06L10 8.94 8.28 7.22z"
-                                  clip-rule="evenodd"
-                                ></path>
-                              </svg>
-                            </div>
-                            <div class="ml-3">
-                              <h3 class="text-sm font-medium text-red-800">
-                                <span
-                                  class="field-validation-valid"
-                                  data-valmsg-for="Invite.EmailAddress"
-                                  data-valmsg-replace="true"
-                                ></span>
-                              </h3>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
+                  </div>
+                  
+                  <div class="mt-4 flex md:mt-0 md:ml-4 space-x-4">
+                    <a
+                      href="/StudioAccounts"
+                      class="inline-flex items-center rounded-3xl border border-transparent bg-white-gold px-8 py-2 text-sm font-medium text-dark-gold hover:text-white shadow-sm hover:bg-gray-900 focus:outline-none focus:ring-2 focus:ring-dark-gold focus:ring-offset-2"
+                      >Cancel</a
+                    >
+  
+                    <button
+                      id="submitButton"
+                      type="button"
+                      class="ml-3 inline-flex items-center border rounded-3xl border-transparent bg-red-600 px-8 py-2 text-sm font-medium text-white shadow-sm hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-offset-2"
+                    >
+                      Archive
+                    </button>
                   </div>
                 </div>
-
-                <input
-                  type="hidden"
-                  data-val="true"
-                  data-val-required="The UserType field is required."
-                  id="Invite_UserType"
-                  name="Invite.UserType"
-                  value="Member"
-                />
-
-                <input
-                  name="__RequestVerificationToken"
-                  type="hidden"
-                  value="CfDJ8NiLLFymghVPvSx63budAdldsaa8COL2RPdsrXtHuPor1altw04cjogrpiFmF5i-heL-5g4cD0Vym2Cm1oUUogfLVPgjU32Cpn_MnxF70C3UoszcyLENIo-KikfQat68a0KdZNTzAi8LdoUUnNFrWMKMEHNcxhclEXpVK2GtUmhck9XZGRyoIllMAZn_6oeP-A"
-                />
-              </form>
+  
+                <div>
+                  <h3 class="text-white-gold"><a href="/Studio?id=4">Sony Pictures Television</a></h3>
+                </div>
+  
+                <div>
+                  <h3><a href="/Studio?id=4">ABC Studios</a></h3>
+                </div>
+  
+                <div class="mx-auto mt-8 ">
+                  <!-- Description list-->
+                  <section aria-labelledby="applicant-information-title">
+                    <div class="bg-white shadow sm:rounded-lg">
+                      <div class="px-4 py-5 sm:px-6">
+                        <h2
+                          id="applicant-information-title"
+                          class="text-lg font-medium leading-6 text-federal-blue"
+                        >
+                          Warning
+                        </h2>
+                      </div>
+                      <div
+                        class="border-t border-gray-200 p-4 bg-white-gold"
+                      >
+                        <div class="flex">
+                          <div class="flex-shrink-0">
+                            <!-- Heroicon name: mini/exclamation-triangle -->
+                            <svg
+                              class="h-5 w-5 text-federal-blue"
+                              xmlns="http://www.w3.org/2000/svg"
+                              fill="none"
+                              viewBox="0 0 24 24"
+                              stroke-width="1.5"
+                              stroke="currentColor"
+                            >
+                              <path
+                                stroke-linecap="round"
+                                stroke-linejoin="round"
+                                d="M12 9v3.75m-9.303 3.376c-.866 1.5.217 3.374 1.948 3.374h14.71c1.73 0 2.813-1.874 1.948-3.374L13.949 3.378c-.866-1.5-3.032-1.5-3.898 0L2.697 16.126zM12 15.75h.007v.008H12v-.008z"
+                              ></path>
+                            </svg>
+                          </div>
+                          <div class="ml-3">
+                            <h3 class="text-sm font-medium text-federal-blue">
+                              <span
+                                >SignOut Test will be locked out of One
+                                Team.</span
+                              >
+                            </h3>
+                            <div class="pt-4 text-white">
+                              <strong
+                                >You may un-archive this account later to restore
+                                access.</strong
+                              >
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </section>
+                </div>
+  
+                <form method="post" id="deleteUserForm">
+                  <input type="hidden" name="id" value="sotest@pm.cuba.io" />
+                  <input
+                    name="__RequestVerificationToken"
+                    type="hidden"
+                    value="CfDJ8NiLLFymghVPvSx63budAdnW4vq1Jv2D0g7vno8uOvLLOtmxslpIcTGDJvX5gBdl-peVRwb8PfGWZ9St_pphmG7Z5q3hS8u5R-M83I6WavfMnT523cp01F0xsaYa3y3oAERNzO8TNdDGBlhESxEwxqhoqoxUbjxvRYoLS-kOIL8Hd2wHRv-NvXZegb4T0YlCnw"
+                  />
+                </form>
+              </div>
             </div>
-          </div>
-
-        </main>
+          </main>
         <!-- Footer -->
         <footer
           class="font-gill-sans text-white bg-federal-blue font-thin w-full"
