--- a/Interior/admin-member-accounts.html
+++ b/Interior/admin-member-accounts.html
@@ -1051,7 +1051,7 @@
 
                 <a
                   class="sidebar-mobile-link group text-federal-blue rounded-xl flex flex-row hover:bg-federal-blue hover:text-white px-2 py-3"
-                  href="/Studios"
+                  href="admin-employer-accounts.html"
                 >
                   <!-- Heroicon name: outline/chart-bar -->
                   <svg
@@ -1314,7 +1314,7 @@
 
               <a
                 class="sidebar-desktop-link group text-federal-blue rounded-xl flex flex-row hover:bg-federal-blue hover:text-white px-2 py-3"
-                href="/StudioAccounts"
+                href="admin-employer-accounts.html"
               >
                 <!-- Heroicon name: outline/chart-bar -->
                 <svg
